Labatt POCM Deployment to UAT 09.16.2016/objects/lboc_Sales_Territory__c.object
<CustomObject>
    <fields>
        <fullName>District_Sales_Manager_SAML_Fed_ID__c</fullName>
        <label>District Sales Manager SAML Fed ID</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSEM_Labatt_SAML_Fed_ID__c</fullName>
        <label>FSEM Labatt SAML Fed ID</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Labatt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Managerr_SAML_Fed_ID__c</fullName>
        <label>Regional Sales Managerr SAML Fed ID</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Rep_SAML_Fed_ID__c</fullName>
        <label>Territory Sales Rep SAML Fed ID</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>